# llama_deploy

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  CONTRIBUTING.md  README.md  pyproject.toml  scripts.sh  test_autodeploy.sh
.github/: release.yml
agentfile/: __init__.py  agent.py  schema.py  types.py
docker/: Dockerfile.base  README.md  base.py  control_plane.py  docker-bake.hcl  docker-compose-awssqs.yml  docker-compose-kafka.yml  docker-compose-rabbitmq.yml  docker-compose-redis.yml  (+7 more)
docs/: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: index.md
docs/docs/api_reference/llama_deploy/: apiserver.md  client.md  control_plane.md  deploy.md  deployment.md  message_consumers.md  message_publishers.md  messages.md  orchestrators.md  python_sdk.md  services.md  types.md
docs/docs/api_reference/llama_deploy/Message Queues/: kafka.md  rabbitmq.md  redis.md  simple.md
docs/docs/api_reference/llama_deploy/message_queues/: index.md  kafka.md  rabbitmq.md  redis.md  simple.md  solace.md
docs/docs/module_guides/llama_deploy/: 10_getting_started.md  20_api_server.md  20_core_components.md  30_manual_orchestration.md  30_python_sdk.md  40_llamactl.md  40_message_queues.md  40_python_sdk.md  50_llamactl.md  50_observability.md  60_llamactl.md  apiserver.json  deployment.md  index.md
docs/docs/module_guides/workflow/: deployment.md
examples/docker-kubernetes/multi-agent-app/: Dockerfile  pyproject.toml  template.env.docker  template.env.local
examples/docker-kubernetes/multi-agent-app/multi_agent_app/: app_control_plane.py  app_funny_agent.py  app_human_consumer.py  app_message_queue.py  app_secret_agent.py  apps.py  local_launcher.py  message_queue.py
examples/docker-kubernetes/multi-agent-app/multi_agent_app/additional_services/: human_consumer.py  task_result.py
examples/docker-kubernetes/multi-agent-app/multi_agent_app/agent_services/: funny_agent.py  secret_agent.py
examples/docker-kubernetes/multi-agent-app/multi_agent_app/agents/: funny_agent.py  secret_agent.py
examples/docker-kubernetes/multi-agent-app/multi_agent_app/core_services/: control_plane.py  message_queue.py
examples/docker-kubernetes/services/control-plane/: Dockerfile  pyproject.toml
examples/docker-kubernetes/services/control-plane/control_plane/: app.py
examples/docker-kubernetes/services/funny-agent/: Dockerfile  pyproject.toml
examples/docker-kubernetes/services/funny-agent/funny_agent/: app.py
examples/docker-kubernetes/services/human-consumer/: Dockerfile  pyproject.toml
examples/docker-kubernetes/services/human-consumer/human_consumer/: app.py  task_result_service.py
examples/docker-kubernetes/services/secret-agent/: Dockerfile  pyproject.toml
examples/docker-kubernetes/services/secret-agent/secret_agent/: app.py
examples/human-in-the-loop/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.env.docker
examples/human-in-the-loop/human_in_the_loop/: __init__.py  local_launcher.py
examples/human-in-the-loop/human_in_the_loop/additional_services/: human_in_the_loop.py
examples/human-in-the-loop/human_in_the_loop/agent_services/: funny_agent.py
examples/human-in-the-loop/human_in_the_loop/app/: __init__.py  app.py
examples/human-in-the-loop/human_in_the_loop/apps/: css.py  gradio_app.py  launch_gradio_app.py  launch_human_service.py
examples/human-in-the-loop/human_in_the_loop/core_services/: control_plane.py  message_queue.py
examples/kafka/pig-latin-translation/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.env.docker  template.env.local
examples/kafka/pig-latin-translation/pig_latin_translation/: local_launcher.py
examples/kafka/pig-latin-translation/pig_latin_translation/additional_services/: human_consumer.py  task_result.py
examples/kafka/pig-latin-translation/pig_latin_translation/agent_services/: correct_first_character_agent.py  decorators.py  remove_ay_agent.py
examples/kafka/pig-latin-translation/pig_latin_translation/core_services/: control_plane.py  message_queue.py
examples/kafka/pig-latin-translation/scripts/: simulation.py
examples/mcp/: README.md  llama_deploy.yaml  pyproject.toml
examples/mcp/src/mcp/: __init__.py  workflows.py
examples/message-queue-integrations/_app/: README.md  pyproject.toml
examples/message-queue-integrations/_app/multi_workflows_app/deployment/: core.py  workflow_funny_joke.py
examples/message-queue-integrations/_app/multi_workflows_app/workflows/: funny_joke.py
examples/python_fullstack/: README.md  docker-compose.yml  pyproject.toml  python_fullstack.yaml
examples/python_fullstack/frontend/: requirements.txt  rxconfig.py
examples/python_fullstack/frontend/frontend/: frontend.py  state.py  style.py
examples/python_fullstack/frontend/frontend/session_list/: component.py  state.py
examples/python_fullstack/llama_deploy_app/control_plane/: deploy.py  dockerfile  requirements.txt
examples/python_fullstack/llama_deploy_app/core_serivces/: .env  deploy.py  dockerfile  requirements.txt
examples/python_fullstack/llama_deploy_app/frontend/: dockerfile  requirements.txt
examples/python_fullstack/llama_deploy_app/frontend/frontend/: frontend.py  state.py
examples/python_fullstack/llama_deploy_app/message_queue/: deploy.py  dockerfile  requirements.txt
examples/python_fullstack/llama_deploy_app/workflows/: agent_workflow.py  deploy.py  dockerfile  rag_workflow.py  requirements.txt
examples/python_fullstack/workflows/: __init__.py  agent_workflow.py  rag_workflow.py  requirements.txt
examples/rabbitmq/example-app/multi-agent-app/: pyproject.toml  template.env.docker  template.env.local
examples/rabbitmq/example-app/multi-agent-app/multi_agent_app/additional_services/: human_consumer.py
examples/rabbitmq/example-app/multi-agent-app/multi_agent_app/agent_services/: funny_agent.py  secret_agent.py
examples/rabbitmq/example-app/multi-agent-app/multi_agent_app/core_services/: control_plane.py  message_queue.py
examples/redis/simple-redis-app/: README.md  docker-compose.yml  local_launcher.py  pyproject.toml
(+598 files in other folders)
