[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
ignore-words-list = "LITS"
skip = "poetry.lock,./examples,*/algolia.js,docs/poetry.lock"

[tool.coverage.run]
omit = [
  "__main__.py",
  "tests/*",
  # deprecated modules
  "llama_deploy/client/async_client.py",
  "llama_deploy/client/sync_client.py"
]

[tool.poetry]
name = "llama-deploy"
version = "0.4.3"
description = ""
authors = [
  "Logan Markewich <logan.markewich@live.com>",
  "Andrei Fajardo <andrei@runllama.ai>"
]
maintainers = [
  "Logan Markewich <logan@llamaindex.ai>",
  "Andrei Fajardo <andrei@runllama.ai>",
  "Jerry Liu <jerry@llamaindex.ai>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.109.1"
llama-index-core = ">=0.11.17,<0.13.0"
pydantic = "!=2.10"
pydantic-settings = ">=2.0,<3.0"
PyYAML = ">6"
uvicorn = ">=0.12.0"
aiobotocore = {version = "^2.14.0", optional = true}
aiokafka = {version = "^0.11.0", optional = true}
aio-pika = {version = "^9.4.2", optional = true}
kafka-python-ng = {version = "^2.2.2", optional = true}
redis = {version = "^5.0.7", optional = true}
solace-pubsubplus = {version = "^1.8.0", optional = true}
types-aiobotocore = {version = "^2.14.0", optional = true, extras = [
  "sqs",
  "sns"
]}
gitpython = "^3.1.43"
python-multipart = "^0.0.18"
typing_extensions = "^4.0.0"
asgiref = "^3.8.1"
python-dotenv = "^1.0.1"

[tool.poetry.extras]
kafka = ["aiokafka", "kafka-python-ng"]
rabbitmq = ["aio-pika"]
redis = ["redis"]
awssqs = ["aiobotocore", "types-aiobotocore"]
solace = ["solace-pubsubplus"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
exceptiongroup = "^1.2.0"
ruff = "^0.4.7"
mypy = "^1.10.0"
aio-pika = "^9.4.2"
redis = "^5.0.7"
solace-pubsubplus = "^1.8.0"
pytest-cov = "^5.0.0"
coverage = "^7.6.0"
aiokafka = "^0.11.0"
kafka-python-ng = "^2.2.2"
aiobotocore = "^2.14.0"
types-aiobotocore = {version = "^2.14.0", extras = ["sqs", "sns"]}

[tool.poetry.scripts]
llamactl = "llama_deploy.cli.__main__:main"
