[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.2.2,<9",
  "pytest-asyncio>=0.23.7,<0.24",
  "pytest-mock>=3.14.0,<4",
  "exceptiongroup>=1.2.0,<2",
  "ruff>=0.4.7,<0.5",
  "mypy>=1.10.0,<2",
  "aio-pika>=9.4.2,<10",
  "redis>=5.0.7,<6",
  "pytest-cov>=5.0.0,<6",
  "coverage>=7.6.0,<8",
  "aiokafka>=0.11.0,<0.12",
  "kafka-python-ng>=2.2.2,<3",
  "pre-commit>=4.2.0",
  "respx>=0.22.0"
]

[project]
name = "llama-deploy"
version = "0.9.2"
description = ""
authors = [
  {name = "Logan Markewich", email = "logan.markewich@live.com"},
  {name = "Andrei Fajardo", email = "andrei@runllama.ai"}
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
maintainers = [
  {name = "Logan Markewich", email = "logan@llamaindex.ai"},
  {name = "Andrei Fajardo", email = "andrei@runllama.ai"},
  {name = "Jerry Liu", email = "jerry@llamaindex.ai"}
]
dependencies = [
  "fastapi>=0.109.1",
  "llama-index-core>=0.11.17,<0.14.0",
  "pydantic!=2.10",
  "pydantic-settings>=2.0,<3.0",
  "PyYAML>6",
  "uvicorn[standard]>=0.12.0",
  "gitpython>=3.1.43,<4",
  "python-multipart>=0.0.18,<0.0.19",
  "typing_extensions>=4.0.0,<5",
  "asgiref>=3.8.1,<4",
  "python-dotenv>=1.0.1,<2",
  "prometheus-client>=0.21.1,<0.22",
  "platformdirs>=4.3.6,<5",
  "rich>=13.9.4,<14",
  "brotli>=1.1.0",
  "websockets>=15.0.1",
  "llama-index-workflows>=0.2.1",
  "fastmcp>=2.8.1"
]

[project.optional-dependencies]
kafka = ["aiokafka>=0.11.0,<0.12", "kafka-python-ng>=2.2.2,<3"]
rabbitmq = ["aio-pika>=9.4.2,<10"]
redis = ["redis>=5.0.7,<6"]
observability = [
  "opentelemetry-api>=1.20.0,<2.0",
  "opentelemetry-sdk>=1.20.0,<2.0",
  "opentelemetry-instrumentation-asyncio>=0.41b0,<1.0",
  "opentelemetry-exporter-jaeger>=1.20.0,<2.0",
  "opentelemetry-exporter-otlp>=1.20.0,<2.0"
]

[project.scripts]
llamactl = "llama_deploy.cli.__main__:main"

[tool.codespell]
ignore-words-list = "LITS"
skip = "./examples,*/algolia.js,docs/poetry.lock"

[tool.coverage.run]
omit = ["__main__.py", "tests/*", "llama_deploy/apiserver/stats.py"]
