[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp"
version = "0.1.0"
description = "Web scraper with local vector store MCP server"
readme = "README.md"
authors = [{name = "Adrian Lyjak", email = "adrianlyjak@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
  "llama-index>=0.11.0",
  "llama-index-embeddings-huggingface>=0.3.0",
  "llama-index-vector-stores-qdrant>=0.3.0",
  "llama-index-readers-web>=0.2.0"
]

[project.scripts]
mcp = "mcp:main"
