[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-fullstack"
version = "0.1.0"
description = "A full stack app built with llama-deploy and reflex"
authors = ["Logan Markewich <logan.markewich@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llama-deploy = "^0.1.0b4"
reflex = "^0.5.10"
llama-index-postprocessor-rankgpt-rerank = "^0.2.0"
llama-index-vector-stores-qdrant = "^0.3.0"
llama-index-llms-openai = "^0.2.2"
llama-index-embeddings-openai = "^0.2.4"
