[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pig-latin-translation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.3"
llama-agents = {version = "^0.0.11", extras = ["kafka"]}
llama-index-llms-openai = "^0.1.26"
