[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pig-latin-translation"
version = "0.1.0"
description = ""
authors = ["Andrei Fajardo <andrei@llamaindex.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.3"
llama-agents = {git = "git@github.com:run-llama/llama-agents.git", rev = "nerdai-kafka", extras = ["kafka"]}
llama-index-llms-openai = "^0.1.26"
