[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pig-latin-translation"
version = "0.1.0"
description = ""
authors = ["Andrei Fajardo <andrei@llamaindex.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.3"
llama-index-llms-openai = "^0.1.26"
llama-index-agent-openai = "^0.2.9"
llama-agents = {version = "^0.0.12", extras = ["kafka"]}
