[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "multi-workflows-app"
version = "0.1.0"
description = ""
authors = ["Andrei Fajardo <andrei@runllama.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index-llms-openai = "^0.2.1"
llama-index-embeddings-openai = "^0.2.4"
llama-index-agent-openai = "^0.3.0"
llama-deploy = {version = "^0.3.0", extras = ["awssqs", "rabbitmq", "kafka", "redis", "solace"]}
